fix: hide scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -18,4 +18,5 @@ body,
   height: 100%;
   width: 100%;
   margin: 0;
+  overflow: hidden;
 }
